--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,23 +1,6 @@
 .footer {
     width: 100%;
-    // margin-top: 10vh;
-
-    // .video-container {
-    //     z-index: -1;
-    //     overflow: hidden;
-    //     position: absolute;
-    //     left: 0;
-    //     right: 0;
-
-    //     video {
-    //         object-fit: fill;
-    //         min-width: 100%;
-    //         min-height: 100%;
-    //         position: absolute;
-    //         top: 50%;
-    //         left: 50%;
-    //         transform: translateX(-50%) translateY(-50%);
-    //     }
+    height: 100%;
 
     .container {
         background-color: $black;
