--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -3,7 +3,7 @@ $portfolioImage: url("../../assets/images/image-3-banner.jpeg");
 $aboutImage: url("../../assets/images/image_3_menu.jpeg");
 $motionImage: url("../../assets/images/image_4_menu.jpeg");
 
-$footer-menu-font-size: 1.6rem;
+$footer-menu-font-size: 1.4rem;
 
 .navbar-menu {
     top: 0;
@@ -114,23 +114,11 @@ $footer-menu-font-size: 1.6rem;
             }
         }
 
-        .menu-footer-divider {
-            margin-top: 12vh;
-            border: none !important;
-            width: 100%;
-            height: 1px;
-            background-color: rgb(83, 83, 83);
-
-            // @media (min-width: $layout-breakpoint-small) {
-            //     display: none;
-            // }
-        }
-
         .menu-footer {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-top: 8vh;
+            margin-top: 20vh;
 
             @media (max-width: $layout-breakpoint-small) {
                 display: none;
@@ -142,6 +130,7 @@ $footer-menu-font-size: 1.6rem;
                     font-size: $footer-menu-font-size;
                     color: $white;
                     letter-spacing: 1px;
+                    cursor: pointer !important;
                 }
             }
 
