--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -1,97 +1,98 @@
-$letter-spacing-banner-text: 42px;
-$gap-banner-images: 50px;
-
-.banner {
-  // visibility: hidden;
-  background-color: transparent;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  .row {
-    overflow: hidden;
-    padding-block: 10vh;
-    position: relative;
-    display: flex;
-    grid-column-gap: $gap-banner-images;
-    grid-template-rows: repeat(3, 1fr);
-
-    @media (max-width: 1440px) {
-      padding-inline: 0;
-    }
-
-    .section {
-      width: 100%;
-      display: grid;
-      grid-template-rows: repeat(2, 1fr);
-
-      img:-moz-loading {
-        visibility: hidden;
-      }
-
-      &.left {
-        margin-block: 50px;
-      }
-
-      &.middle {
-        grid-template-rows: none !important;
-      }
-
-      &.right {
-        margin-block: 50px;
-      }
-    }
-
-    .banner-images-container {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-
-      .banner-image {
+.re-designed-banner {
+    visibility: hidden;
+    width: 100%;
+    height: 100vh;
+    .banner-container {
         width: 100%;
-        height: 100%;
-        display: inline-block;
-        vertical-align: middle;
-      }
+        height: 90%;
 
-      .side-image {
-        position: absolute;
-        height: auto; /* Make sure images are scaled correctly. */
-        width: 100%; /* Adhere to container width. */
-        display: block;
-        flex-shrink: 0;
-        min-width: 100%;
-        min-height: 100%;
-        object-fit: cover;
-      }
+        .banner-grid {
+            width: 100%;
+            height: 100%;
+            display: grid;
+            grid-template-columns: 40% 60%;
+
+            .hero-text {
+                display: table;
+
+                .hero-text-inner {
+                    display: table-cell;
+                    vertical-align: middle;
+
+                    .my-name-line {
+                        display: flex;
+                        line-height: 1.4;
+                        overflow: hidden;
+                        margin-bottom: 4vh;
+                        .my-name-text {
+                            z-index: 2;
+                            font-size: 7rem;
+                            font-weight: 600;
+                        }
+
+                        .name-divider {
+                            padding-inline: 1vw;
+                        }
+                    }
+
+                    .profession-line {
+                        line-height: 1.4;
+                        overflow: hidden;
+                        margin-bottom: 6vh;
+                        .profession-text {
+                            font-weight: 500;
+                            font-size: 2rem;
+                            color: $text-color;
+                        }
+                    }
+
+                    .scrolldown-line {
+                        overflow: hidden;
+                        line-height: 1.4;
+                        display: flex;
+
+                        .scrolldown-text {
+                            font-weight: 500;
+                            letter-spacing: 1px;
+                            font-size: 1.7rem;
+                            padding-right: 10px;
+                        }
+
+                        .arrow-down-icon {
+                            margin-block: auto;
+                            font-size: 1.45rem;                           
+                        }
+                    }
+                }
+            }
+
+            .big-banner-image {
+                position: relative;
+                top: 5%;
+                z-index: 1;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+
+                .banner-reveal {
+                    z-index: 2;
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background-color: $background;
+                }
+
+                img {
+                    height: auto; /* Make sure images are scaled correctly. */
+                    width: 100%; /* Adhere to container width. */
+                    display: block;
+                    flex-shrink: 0;
+                    min-width: 100%;
+                    min-height: 100%;
+                    object-fit: cover;
+                    display: inline-block;
+                }
+            }
+        }
     }
-  }
-}
-
-.banner-text {
-  color: #fff;
-  font-size: 7rem;
-  font-weight: 700;
-  left: 0;
-  letter-spacing: 42px;
-  line-height: 1;
-  mix-blend-mode: difference;
-  overflow: hidden;
-  position: absolute;
-  text-align: center;
-  text-transform: uppercase;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 100%;
-  z-index: 2;
-
-  @media (max-width: 1440px) {
-    font-size: 6rem;
-    letter-spacing: 36px;
-  }
 }
