--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -82,7 +82,6 @@ $footer-menu-font-size: 1.4rem;
 
                             &:hover {
                                 margin-left: 10px;
-
                             }
                         }
                     }
@@ -114,6 +113,18 @@ $footer-menu-font-size: 1.4rem;
             }
         }
 
+        .menu-footer-divider {
+            margin-top: 12vh;
+            border: none !important;
+            width: 100%;
+            height: 1px;
+            background-color: rgb(83, 83, 83);
+
+            @media (min-width: $layout-breakpoint-small) {
+                display: none;
+            }
+        }
+
         .menu-footer {
             display: flex;
             align-items: center;
@@ -140,7 +151,7 @@ $footer-menu-font-size: 1.4rem;
                 letter-spacing: 1px;
 
                 .footer-copyright-divider {
-                    padding-inline: .2vw;
+                    padding-inline: 0.2vw;
                     font-weight: 700;
                 }
             }
@@ -160,12 +171,13 @@ $footer-menu-font-size: 1.4rem;
                 align-items: center;
                 justify-content: space-between;
 
-                .local-time-footer, .footer-copyright-responsive {
+                .local-time-footer,
+                .footer-copyright-responsive {
                     width: auto;
                     display: block;
                     font-size: 1.4rem;
                     color: $white;
-                    letter-spacing: .5px;
+                    letter-spacing: 0.5px;
                 }
             }
         }
