--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -58,8 +58,7 @@
                         .about-socials-list {
                             .about-social {
                                 padding: 1rem;
-
-                                border-bottom: 1px solid $divider-color;
+                                border-bottom: 1px solid $black;
                                 .about-social-link {
                                     display: flex;
                                     align-items: center;
@@ -74,7 +73,6 @@
                                     }
 
                                     .about-social-link-arrow {
-
                                         color: $black;
                                         font-size: 1.8rem;
                                     }
