--- a/src/scss/components/_home-about-normal.scss
+++ b/src/scss/components/_home-about-normal.scss
@@ -3,7 +3,8 @@ $layout-breakpoint-home-about: 1150px;
 .home-about-normal {
     display: block;
     width: 100%;
-    margin-block: 30vh;
+    margin-block: 40vh;
+    visibility: hidden;
 
     @media (max-width: $layout-breakpoint-small) {
         display: none;
@@ -34,47 +35,20 @@ $layout-breakpoint-home-about: 1150px;
                     display: table-cell;
                     vertical-align: middle;
 
-                    .who-am-i-container {
-                        line-height: 1;
-                        overflow: hidden;
-                        margin-bottom: 5rem;
-
-                        .who-am-i {
-                            font-size: 6.3rem;
-                            color: $black;
-                            font-weight: 700;
-
-                            @media (max-width: $layout-breakpoint-medium) {
-                                font-size: 5.5rem;
-                            }
-
-                            @media (max-width: 1260px) {
-                                font-size: 5rem;
-                            }
-
-                            @media (max-width: $layout-breakpoint-home-about) {
-                                font-size: 4.5rem;
-                            }
-                        }
-                    }
-
-                    .title-divider {
-                        font-weight: 500;
-                    }
-
                     h1 {
                         position: relative;
                         font-weight: 500;
-                        margin-bottom: 24px;
 
                         .home-about-content-line {
-                            font-size: 2.8rem;
+                            color: $black;
+                            font-weight: 600;
+                            font-size: 3.5em;
                             margin: 0;
-                            line-height: 1.4;
+                            line-height: 1.5;
                             overflow: hidden;
 
                             @media (max-width: $layout-breakpoint-medium) {
-                                font-size: 2.5rem;
+                                font-size: 2.8rem;
                             }
 
                             @media (max-width: $layout-breakpoint-home-about) {
@@ -82,37 +56,32 @@ $layout-breakpoint-home-about: 1150px;
                             }
 
                             .home-about-content-line-inner {
-                                .what-am-i {
-                                    letter-spacing: 1px;
-                                    font-size: 3.1rem;
-                                    color: $black;
-                                    font-weight: 700;
-
-                                    @media (max-width: 1370px) {
-                                        font-size: 2.5rem;
-                                    }
-                                }
                             }
                         }
                     }
 
-                    p {
-                        margin-block: 3em;
-                        font-size: 1.43rem;
-                        line-height: 30px;
-                        font-weight: 300;
-                        padding-right: 48px;
+                    .paragraphs {
+                        padding-block: 2.5em;
+                        .hero-content-paragraph {
+                            max-width: 50ch;
+                            padding-block: .6em;
+                            font-size: 1.6rem;
+                            line-height: 30px;
+                            font-weight: 300;
+                            padding-right: 48px;
 
-                        @media (max-width: $layout-breakpoint-medium) {
-                            font-size: 1.3rem;
-                        }
+                            @media (max-width: $layout-breakpoint-medium) {
+                                font-size: 1.3rem;
+                            }
 
-                        @media (max-width: $layout-breakpoint-home-about) {
-                            padding-right: 0px;
+                            @media (max-width: $layout-breakpoint-home-about) {
+                                padding-right: 0px;
+                            }
                         }
                     }
 
                     .home-about-buttons {
+                        padding-top: 2em;
                         display: flex;
 
                         .home-about-divider {
@@ -121,54 +90,21 @@ $layout-breakpoint-home-about: 1150px;
                             padding-inline: 2rem;
                         }
 
-                        .read-about-button {
-                            // &:last-child {
-                            //     padding-left: 1vw;
-                            // }
-                            text-decoration: none;
-
-                            .read-about-link {
-                                // border-radius: 5rem;
-                                // padding-block: .7rem;
-                                // padding-inline: 2.4rem;
-                                // border: 1px solid rgb(196, 196, 196);
-                                position: relative;
-                                background-color: transparent;
-                                transition: 0.5s ease-in-out;
-                                cursor: pointer !important;
-                                border: none;
-
-                                // color: #323232;
-                                color: $black;
-                                font-weight: 600;
-                                font-size: 1.6rem;
-                                font-family: inherit;
+                        .home-about-button {
+                            .page-link {
                                 text-decoration: none;
-                                
+                                .read-about-link {
+                                    position: relative;
+                                    background-color: transparent;
+                                    transition: 0.5s ease-in-out;
+                                    cursor: pointer !important;
+                                    border: none;
 
-                                // &:hover {
-                                //     background-color: $black;
-                                //     border: 1px solid $black;
-                                //     color: $white;
-                                // }
-
-                                &::after {
-                                    height: 1px;
-                                    border-bottom: 1px solid #0f141e;
-                                    border-bottom-width: 1px;
-                                    background: 0 0;
-                                    position: absolute;
-                                    display: block;
-                                    top: 100%;
-                                    right: 0;
-                                    width: 100%;
-                                    content: "";
-                                    transition: opacity 0.2s linear;
-                                    opacity: 0;
-                                }
-
-                                &:hover::after {
-                                    opacity: 1;
+                                    color: $black;
+                                    font-weight: 600;
+                                    font-size: 1.7rem;
+                                    font-family: inherit;
+                                    text-decoration: none;
                                 }
                             }
                         }
