--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    height: 90vh;
+    height: 100%;
 
     .container {
         background-color: $background;
@@ -10,44 +10,73 @@
         z-index: 2;
         align-items: flex-end;
         .top-footer-row {
-            height: 100%;
+            margin-block: 35vh;
             width: 100%;
             display: flex;
             grid-template-rows: repeat(2, 1fr);
-            grid-column-gap: 2rem;
 
             .footer-socials {
+                display: table;
                 width: 100%;
 
                 .footer-socials-list {
+                    display: table-cell;
+                    vertical-align: middle;
                     .footer-social-link {
-                        padding-block: 1rem;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        width: 50%;
+                        font-size: 1.8rem;
+                        padding-block: 1.4rem;
+                        box-shadow: inset 0 -1px 0 rgb(156, 156, 156);
+                        cursor: pointer !important;
                         a {
-                            font-size: 1.8rem;
+
                             text-decoration: none;
-                            color: $black
+                            color: $black;
+                            font-weight: 600;
+                            cursor: pointer !important;
+                        }
+
+                        .footer-social-link-arrow {
+
                         }
                     }
                 }
             }
 
             .footer-email {
+                width: 100%;
+                display: table;
                 .email-header {
+                    display: table-cell;
+                    vertical-align: middle;
                     width: 100%;
-                    text-align: center;
 
-                    .text-above-link {
-                        font-size: 1.3rem;
+                    .interested-question {
+                        font-weight: 600;
+                        font-size: 1.8rem;
+                        padding-bottom: 2rem;
+                        color: $text-color;
                     }
+
                     .email-header-link {
+                        padding-block: 1rem;
                         a {
                             font-weight: 700;
                             font-size: calc(clamp(3rem, 7vw, 8rem) * 0.875);
                             color: $black;
+                            cursor: pointer !important;
+                        }
+
+                        &.email a {
+                            text-decoration: none;
                         }
 
                         .email-link-icon {
-                            font-size: 8rem;
+                            padding-left: 10px;
+                            font-size: 5rem;
                         }
                     }
                 }
@@ -55,8 +84,8 @@
         }
 
         .bottom-footer-row {
-            padding-block: 4rem;
-            font-size: 1.5em;
+            height: 10vh;
+            font-size: 1.35rem;
             font-weight: 600;
             color: $black;
 
@@ -69,47 +98,14 @@
                 .footer-copyright {
                 }
 
-                .footer-socials {
-                    display: flex;
-
-                    .footer-social-link {
-                        color: $black;
-                        padding-inline: 2rem;
-                        text-decoration: none;
-                    }
-                }
-
                 .made-by {
                     a {
+                        font-size: 1.5rem;
                         text-decoration: none;
                         color: $black;
+                        cursor: pointer !important;
                     }
                 }
-            }
-        }
-    }
-}
-
-.socials {
-    font-size: 2rem;
-
-    .social-link {
-        margin-inline: 1em;
-        &:first-child {
-            margin-left: 0px !important;
-        }
-
-        .icon {
-            width: 20px;
-            padding: 12px;
-            border-radius: 50%;
-            border: 2px solid $black;
-            color: black;
-            transition: 0.3s ease-in-out;
-
-            &:hover {
-                background-color: black;
-                color: white;
             }
         }
     }
