--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -31,8 +31,8 @@
                         padding-block: 1.4rem;
                         box-shadow: inset 0 -1px 0 rgb(156, 156, 156);
                         cursor: pointer !important;
-                        a {
 
+                        a {
                             text-decoration: none;
                             color: $black;
                             font-weight: 600;
@@ -40,6 +40,7 @@
                         }
 
                         .footer-social-link-arrow {
+                            font-size: 1.9rem;
 
                         }
                     }
